<resources>
    <string name="app_name">Pop Movies</string>

    <string name="settings" translatable="false">Settings</string>
    <string name="title_activity_detail" translatable="false">Details</string>

    <string-array name="pref_entries" translate="false">
        <item>Popularity</item>
        <item>Rating</item>
        <item>Favorites</item>
    </string-array>

    <string-array name="pref_values" translate="false">
        <item>popularity</item>
        <item>rating</item>
        <item>favorites</item>
    </string-array>

    <string name="action_share">Share</string>
    <string name="hello" translatable="false">Hello</string>
    <string name="favorite" translatable="false">FAVORITE</string>
    <string name="Trailer1" translatable="false"> > Trailer  1</string>
    <string name="Trailer2" translatable="false"> > Trailer  2</string>
    <string name="Reviews" translatable="false">Reviews :</string>
    <string name="Trailers" translatable="false">Trailers : " </string>


</resources>
